--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
   <head>
     <title>Practice for basic HTML and CSS</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <h1>nrgDevcode Dashboard</h1>
-      <nav>
+      <nav class="nav-bar">
         <a href="#">Home</a>
         <a href="#">Portfolio</a>
         <a href="#">Contact Us</a>
         <a href="#">Career</a>
       </nav>
 
-      <h3>Photoshoot of the pillars of Hollywood</h3>
+      <h3 class="top-center">Photoshoot of the pillars of Hollywood</h3>
 
       <h4>
         Following is a potrait shot of Dua Lipa featuring a red background
